--- a/notebooks/02_data_transformation.ipynb
+++ b/notebooks/02_data_transformation.ipynb
@@ -82,7 +82,16 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-06-08 19:58:39,852: INFO: utils: Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.]\n",
+      "[2024-06-08 19:58:39,853: INFO: utils: NumExpr defaulting to 8 threads.]\n"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "from src.logger import logging\n",
@@ -92,18 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DataTransformation:\n",
-    "    def __init__(self,config: DataTransfomationConfig):\n",
-    "\n",
+    "    def __init__(self, config: DataTransfomationConfig):\n",
     "        self.config = config\n",
-    "        self.tokenizer = BartTokenizer.from_pretrained(config.tokenizer_name)\n",
+    "        self.tokenizer = BartTokenizer.from_pretrained(str(config.tokenizer_name))\n",
     "        \n",
     "    def convert_examples_to_features(self, example_batch):\n",
-    "        input_encoding = self.tokenizer(example_batch['dialogue'], max_length=1024, truncate=True)\n",
+    "        input_encoding = self.tokenizer(example_batch['dialogue'], max_length=1024, truncation=True)\n",
     "        \n",
     "        with self.tokenizer.as_target_tokenizer():\n",
     "            target_encoding = self.tokenizer(example_batch['summary'], max_length=128, truncation=True)\n",
@@ -116,54 +124,125 @@
     "        }\n",
     "    \n",
     "    def convert(self):\n",
+    "        # Ensure the paths are converted to strings\n",
     "        dataset_samsum = load_from_disk(self.config.data_path)\n",
     "        dataset_samsum_pt = dataset_samsum.map(self.convert_examples_to_features, batched=True)\n",
-    "        dataset_samsum_pt.save_to_disk(os.path.join(self.config.root_dir, \"samsum_dataset\"))"
+    "        dataset_samsum_pt.save_to_disk(os.path.join(str(self.config.root_dir), \"samsum_dataset\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from datasets import load_from_disk\n",
-    "\n",
-    "try:\n",
-    "    dataset_path = os.path.join(self.config.root_dir, \"samsum_dataset\")\n",
-    "    dataset_samsum = load_from_disk(dataset_path)\n",
-    "except ValueError as e:\n",
-    "    print(f\"Error loading dataset: {e}\")\n",
-    "    print(f\"Dataset path: {dataset_path}\")\n",
-    "    print(\"Check if the dataset is saved correctly and the path is correct.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "Directory artifacts/data_ingestion is neither a `Dataset` directory nor a `DatasetDict` directory.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m     data_transformation\u001b[38;5;241m.\u001b[39mconvert()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[13], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     data_transformation_config \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mget_data_transformation_config()\n\u001b[0;32m      4\u001b[0m     data_transformation \u001b[38;5;241m=\u001b[39m DataTransformation(data_transformation_config)\n\u001b[1;32m----> 5\u001b[0m     data_transformation\u001b[38;5;241m.\u001b[39mconvert()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[12], line 21\u001b[0m, in \u001b[0;36mDataTransformation.convert\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mconvert\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m---> 21\u001b[0m     dataset_samsum \u001b[38;5;241m=\u001b[39m load_from_disk(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mdata_path)\n\u001b[0;32m     22\u001b[0m     dataset_samsum_pt \u001b[38;5;241m=\u001b[39m dataset_samsum\u001b[38;5;241m.\u001b[39mmap(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconvert_examples_to_features, batched\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     23\u001b[0m     dataset_samsum_pt\u001b[38;5;241m.\u001b[39msave_to_disk(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mroot_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msamsum_dataset\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
-      "File \u001b[1;32mc:\\Users\\IT STORE\\anaconda3\\Lib\\site-packages\\datasets\\load.py:1894\u001b[0m, in \u001b[0;36mload_from_disk\u001b[1;34m(dataset_path, fs, keep_in_memory, storage_options)\u001b[0m\n\u001b[0;32m   1892\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m DatasetDict\u001b[38;5;241m.\u001b[39mload_from_disk(dataset_path, keep_in_memory\u001b[38;5;241m=\u001b[39mkeep_in_memory, storage_options\u001b[38;5;241m=\u001b[39mstorage_options)\n\u001b[0;32m   1893\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1894\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\n\u001b[0;32m   1895\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDirectory \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdataset_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is neither a `Dataset` directory nor a `DatasetDict` directory.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1896\u001b[0m     )\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: Directory artifacts/data_ingestion is neither a `Dataset` directory nor a `DatasetDict` directory."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-06-08 20:06:48,895: INFO: utils: yaml file: config\\config.yaml loaded successfully.]\n",
+      "[2024-06-08 20:06:48,897: INFO: utils: yaml file: params.yaml loaded successfully.]\n",
+      "[2024-06-08 20:06:48,901: INFO: utils: Created directory at: artifacts]\n",
+      "[2024-06-08 20:06:48,902: INFO: utils: Created directory at: artifacts/data_transformation]\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4e5284bfe2594c7e992bc3430e01ac4f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/14732 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\IT STORE\\anaconda3\\Lib\\site-packages\\transformers\\tokenization_utils_base.py:3866: UserWarning: `as_target_tokenizer` is deprecated and will be removed in v5 of Transformers. You can tokenize your labels by using the argument `text_target` of the regular `__call__` method (either in the same call as your input texts if you use the same keyword arguments, or in a separate call.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68d4100843e146d8b284d5265a29c0dc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/819 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a5226e85cd8b4c51a77984397d1db02a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/818 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a21159d05b3c4079852d98e310afd00a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/14732 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "858c868193814652a540740cd032ad41",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/819 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ad06632a72c4268828cee53cb6c6ded",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Saving the dataset (0/1 shards):   0%|          | 0/818 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
     "    data_transformation_config = config.get_data_transformation_config()\n",
-    "    data_transformation = DataTransformation(data_transformation_config)\n",
+    "    data_transformation = DataTransformation(config=data_transformation_config)\n",
     "    data_transformation.convert()\n",
     "except Exception as e:\n",
     "    raise e"
