--- a/notebooks/03_model_trainer.ipynb
+++ b/notebooks/03_model_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'c:\\\\Users\\\\IT STORE\\\\Desktop\\\\ML-Projects\\\\Text-Summarizer'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,56 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from transformers import TrainingArguments\n",
-    "\n",
-    "# # # Define training arguments\n",
-    "# trainer_args = TrainingArguments(\n",
-    "#     output_dir=\"./outputs\",  # Output directory for checkpoints, tensorboard logs, etc.\n",
-    "#     overwrite_output_dir=True,  # Overwrite existing output directory (optional)\n",
-    "#     num_train_epochs=3,  # Number of training epochs\n",
-    "#     per_device_train_batch_size=4,  # Batch size per training GPU/TPU\n",
-    "#     save_steps=10_000,  # Save model checkpoint every N steps\n",
-    "#     save_total_limit=2,  # Maximum number of checkpoints to save\n",
-    "#     logging_steps=500,  # Log training information every N steps\n",
-    "#     evaluation_strategy=\"epoch\",  # Evaluate model performance after each epoch\n",
-    "#     metric_for_best_model=\"loss\",  # Metric to monitor for early stopping (minimize loss)\n",
-    "#     load_best_model_at_end=True,  # Load the best model based on the monitored metric\n",
-    "#     warmup_steps=500,  # Number of warmup steps for learning rate scheduler\n",
-    "#     learning_rate=2e-5,  # Learning rate for the optimizer\n",
-    "#     adam_epsilon=1e-8,  # Epsilon for Adam optimizer\n",
-    "#     weight_decay=0.01,  # Weight decay for optimizer\n",
-    "# )\n",
-    "\n",
-    "# Feel free to modify these arguments based on your specific needs\n",
-    "\n",
-    "# # Example usage with transformers.Trainer\n",
-    "# from transformers import Trainer, BartForConditionalGeneration\n",
-    "\n",
-    "# model_name = \"facebook/bart-large-cnn\"\n",
-    "# tokenizer = BartTokenizer.from_pretrained(model_name)\n",
-    "# model = BartForConditionalGeneration.from_pretrained(model_name)\n",
-    "\n",
-    "# # Prepare your training data (text and labels)\n",
-    "# train_data = ...  # Your training dataset\n",
-    "\n",
-    "# trainer = Trainer(\n",
-    "#     model=model,\n",
-    "#     args=trainer_args,\n",
-    "#     tokenizer=tokenizer,\n",
-    "#     train_dataset=train_data,\n",
-    "# )\n",
-    "\n",
-    "# # Start training\n",
-    "# trainer.train()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,12 +48,13 @@
     "    warmup_steps: int  # Number of warmup steps for learning rate scheduler\n",
     "    learning_rate: float  # Learning rate for the optimizer\n",
     "    adam_epsilon: float  # Epsilon for Adam optimizer\n",
-    "    weight_decay: float  # Weight decay for optimizer\n"
+    "    weight_decay: float  # Weight decay for optimizer\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +79,7 @@
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
     "        \n",
-    "    def get_model_trainer_config(self):\n",
+    "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
     "        config = self.config.model_trainer\n",
     "        params = self.params.TrainingArguments\n",
     "        create_directories([config.root_dir])\n",
@@ -135,37 +87,38 @@
     "            root_dir = config.root_dir,\n",
     "            data_path = config.data_path,\n",
     "            model_ckpt = config.model_ckpt,\n",
-    "            overwrite_output_dir = config.overwrite_output_dir,\n",
+    "            overwrite_output_dir = params.overwrite_output_dir,\n",
     "            num_train_epochs = params.num_train_epochs,\n",
-    "            per_device_train_batch_size= config.per_device_train_batch_size,\n",
-    "            save_steps = config.save_steps,\n",
-    "            save_total_limit = config.save_total_limit,\n",
-    "            logging_steps = config.logging_steps,\n",
-    "            evaluation_strategy = config.evaluation_strategy,\n",
-    "            metric_for_best_model = config.metric_for_best_model,\n",
-    "            load_best_model_at_end = config.load_best_model_at_end,\n",
-    "            warmup_steps = config.warmup_steps,\n",
-    "            learning_rate = config.learning_rate,\n",
-    "            adam_epsilon = config.adam_epsilon,\n",
-    "            weight_decay = config.weight_decay\n",
+    "            per_device_train_batch_size= params.per_device_train_batch_size,\n",
+    "            save_steps = params.save_steps,\n",
+    "            save_total_limit = params.save_total_limit,\n",
+    "            logging_steps = params.logging_steps,\n",
+    "            evaluation_strategy = params.evaluation_strategy,\n",
+    "            metric_for_best_model = params.metric_for_best_model,\n",
+    "            load_best_model_at_end = params.load_best_model_at_end,\n",
+    "            warmup_steps = params.warmup_steps,\n",
+    "            learning_rate = params.learning_rate,\n",
+    "            adam_epsilon = params.adam_epsilon,\n",
+    "            weight_decay = params.weight_decay\n",
     "        )\n",
+    "\n",
     "        \n",
     "        return model_trainer_config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-06-08 20:44:22,038: WARNING: module_wrapper: From c:\\Users\\IT STORE\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "[2024-06-09 18:38:37,729: WARNING: module_wrapper: From c:\\Users\\IT STORE\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
       "]\n",
-      "[2024-06-08 20:44:22,232: INFO: utils: Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.]\n",
-      "[2024-06-08 20:44:22,233: INFO: utils: NumExpr defaulting to 8 threads.]\n"
+      "[2024-06-09 18:38:38,073: INFO: utils: Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.]\n",
+      "[2024-06-09 18:38:38,075: INFO: utils: NumExpr defaulting to 8 threads.]\n"
      ]
     }
    ],
@@ -179,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,39 +156,23 @@
     "        # loading data\n",
     "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
     "        \n",
-    "        # trainer_args = TrainingArguments(\n",
-    "        #     output_dir=self.config.root_dir,\n",
-    "        #     overwrite_output_dir=True,\n",
-    "        #     num_train_epochs=self.config.num_train_epochs,\n",
-    "        #     per_device_train_batch_size=self.config.per_device_train_batch_size,\n",
-    "        #     save_steps=self.config.save_steps,\n",
-    "        #     save_total_limit=self.config.save_total_limit,\n",
-    "        #     logging_steps=self.config.logging_steps,\n",
-    "        #     evaluation_strategy=self.config.evaluation_strategy,\n",
-    "        #     metric_for_best_model=self.config.metric_for_best_model,\n",
-    "        #     load_best_model_at_end=self.config.load_best_model_at_end,\n",
-    "        #     warmup_steps=self.config.warmup_steps,\n",
-    "        #     learning_rate=self.config.learning_rate,\n",
-    "        #     adam_epsilon=self.config.adam_epsilon,\n",
-    "        #     weight_decay=self.config.weight_decay\n",
-    "        # )\n",
-    "        \n",
-    "        trainer_args=  TrainingArguments(\n",
-    "            output_dir=self.config.root_dir,  # Output directory for checkpoints, tensorboard logs, etc.\n",
-    "            overwrite_output_dir=True,  # Overwrite existing output directory (optional)\n",
-    "            num_train_epochs=3,  # Number of training epochs\n",
-    "            per_device_train_batch_size=4,  # Batch size per training GPU/TPU\n",
-    "            save_steps=10_000,  # Save model checkpoint every N steps\n",
-    "            save_total_limit=2,  # Maximum number of checkpoints to save\n",
-    "            logging_steps=500,  # Log training information every N steps\n",
-    "            evaluation_strategy=\"epoch\",  # Evaluate model performance after each epoch\n",
-    "            metric_for_best_model=\"loss\",  # Metric to monitor for early stopping (minimize loss)\n",
-    "            load_best_model_at_end=True,  # Load the best model based on the monitored metric\n",
-    "            warmup_steps=500,  # Number of warmup steps for learning rate scheduler\n",
-    "            learning_rate=2e-5,  # Learning rate for the optimizer\n",
-    "            adam_epsilon=1e-8,  # Epsilon for Adam optimizer\n",
-    "            weight_decay=0.01,  # Weight decay for optimizer\n",
+    "        trainer_args = TrainingArguments(\n",
+    "            output_dir=self.config.root_dir,\n",
+    "            overwrite_output_dir=self.config.overwrite_output_dir,\n",
+    "            num_train_epochs=self.config.num_train_epochs,\n",
+    "            per_device_train_batch_size=self.config.per_device_train_batch_size,\n",
+    "            save_steps=self.config.save_steps,\n",
+    "            save_total_limit=self.config.save_total_limit,\n",
+    "            logging_steps=self.config.logging_steps,\n",
+    "            evaluation_strategy=self.config.evaluation_strategy,\n",
+    "            metric_for_best_model=self.config.metric_for_best_model,\n",
+    "            load_best_model_at_end=self.config.load_best_model_at_end,\n",
+    "            warmup_steps=self.config.warmup_steps,\n",
+    "            learning_rate=self.config.learning_rate,\n",
+    "            adam_epsilon=self.config.adam_epsilon,\n",
+    "            weight_decay=self.config.weight_decay\n",
     "        )\n",
+    "\n",
     "\n",
     "        \n",
     "        model_trainer = Trainer(\n",
@@ -263,21 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-06-08 20:44:24,436: INFO: utils: yaml file: config\\config.yaml loaded successfully.]\n",
-      "[2024-06-08 20:44:24,440: INFO: utils: yaml file: params.yaml loaded successfully.]\n",
-      "[2024-06-08 20:44:24,442: INFO: utils: Created directory at: artifacts]\n",
-      "[2024-06-08 20:44:24,443: INFO: utils: Created directory at: artifacts/data_trainer]\n",
-      "\"'ConfigBox' object has no attribute 'overwrite_output_dir'\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    config = ConfigurationManager()\n",
