--- a/notebooks/03_model_trainer.ipynb
+++ b/notebooks/03_model_trainer.ipynb
@@ -37,18 +37,18 @@
     "    data_path: Path\n",
     "    model_ckpt: Path\n",
     "    overwrite_output_dir: bool\n",
-    "    num_train_epochs: int # Number of training epochs\n",
-    "    per_device_train_batch_size: int  # Batch size per training GPU/TPU\n",
-    "    save_steps: int   # Save model checkpoint every N steps\n",
-    "    save_total_limit: int  # Maximum number of checkpoints to save\n",
-    "    logging_steps: int # Log training information every N steps\n",
-    "    evaluation_strategy: str  # Evaluate model performance after each epoch\n",
-    "    metric_for_best_model: str  # Metric to monitor for early stopping (minimize loss)\n",
-    "    load_best_model_at_end: bool  # Load the best model based on the monitored metric\n",
-    "    warmup_steps: int  # Number of warmup steps for learning rate scheduler\n",
-    "    learning_rate: float  # Learning rate for the optimizer\n",
-    "    adam_epsilon: float  # Epsilon for Adam optimizer\n",
-    "    weight_decay: float  # Weight decay for optimizer\n",
+    "    num_train_epochs: int \n",
+    "    per_device_train_batch_size: int  \n",
+    "    save_steps: int   \n",
+    "    save_total_limit: int \n",
+    "    logging_steps: int \n",
+    "    evaluation_strategy: str  \n",
+    "    metric_for_best_model: str  \n",
+    "    load_best_model_at_end: bool  \n",
+    "    warmup_steps: int  \n",
+    "    learning_rate: float \n",
+    "    adam_epsilon: float  \n",
+    "    weight_decay: float  \n",
     "\n"
    ]
   },
@@ -148,8 +148,8 @@
     "        self.config = config\n",
     "        \n",
     "    def train(self):\n",
-    "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"  # Corrected to torch.cuda.is_available()\n",
-    "        tokenizer = BartTokenizer.from_pretrained(self.config.model_ckpt)  # Assuming BartTokenizer is correct\n",
+    "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\" \n",
+    "        tokenizer = BartTokenizer.from_pretrained(self.config.model_ckpt)  \n",
     "        model_bert = BartForConditionalGeneration.from_pretrained(self.config.model_ckpt).to(device)\n",
     "        seq2seq_data_collator = DataCollatorForSeq2Seq(tokenizer, model=model_bert)\n",
     "        \n",
