--- a/notebooks/04_model_evaluation.ipynb
+++ b/notebooks/04_model_evaluation.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.chdir(\"../\")"
    ]
   },
@@ -19,6 +20,7 @@
     "from dataclasses import dataclass\n",
     "from pathlib import Path\n",
     "\n",
+    "\n",
     "@dataclass(frozen=True)\n",
     "class ModelEvaluationConfig:\n",
     "    root_dir: Path\n",
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,37 +42,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
     "    def __init__(\n",
-    "        self,\n",
-    "        config_filepath = CONFIG_FILE_PATH,\n",
-    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "        self, config_filepath=CONFIG_FILE_PATH, params_filepath=PARAMS_FILE_PATH\n",
+    "    ):\n",
     "\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
     "\n",
     "        create_directories([self.config.artifacts_root])\n",
-    "    \n",
+    "\n",
     "    def get_model_evaluation_config(self):\n",
     "        config = self.config.model_evaluation\n",
-    "        \n",
+    "\n",
     "        create_directories([config.root_dir])\n",
-    "        \n",
+    "\n",
     "        model_evaluation_config = ModelEvaluationConfig(\n",
     "            root_dir=config.root_dir,\n",
     "            data_path=config.data_path,\n",
     "            model_path=config.model_path,\n",
     "            tokenizer_path=config.tokenizer_path,\n",
-    "            metric_file_name= config.metric_file_name\n",
+    "            metric_file_name=config.metric_file_name,\n",
     "        )\n",
-    "        \n",
-    "        return model_evaluation_config\n",
-    "    \n",
-    "        "
+    "\n",
+    "        return model_evaluation_config"
    ]
   },
   {
@@ -82,8 +81,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-06-08 17:51:02,473: WARNING: module_wrapper: From c:\\Users\\IT STORE\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "]\n"
+      "[2024-06-09 20:03:54,180: WARNING: module_wrapper: From c:\\Users\\IT STORE\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "]\n",
+      "[2024-06-09 20:03:54,391: INFO: utils: Note: NumExpr detected 12 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.]\n",
+      "[2024-06-09 20:03:54,391: INFO: utils: NumExpr defaulting to 8 threads.]\n"
      ]
     }
    ],
@@ -95,70 +96,91 @@
     "\n",
     "import torch\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm\n"
+    "from tqdm import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class ModelEvaluation:\n",
-    "    def __init__(self,config):\n",
+    "    def __init__(self, config):\n",
     "        self.config = config\n",
-    "        \n",
+    "\n",
     "    def generate_batch_sized_chunks(self, list_of_elements, batch_size):\n",
     "        \"\"\"split the dataset into smaller batches that we can process simultaneously\n",
     "        Yield successive batch-sized chunks from the list of elements.\n",
     "        \"\"\"\n",
     "        for i in range(0, len(list_of_elements), batch_size):\n",
-    "            yield list_of_elements[i : i + batch_size ]\n",
-    "            \n",
+    "            yield list_of_elements[i : i + batch_size]\n",
+    "\n",
     "    def calcuate_metric_on_test_dataset(\n",
-    "        self, dataset, metric, model, tokenizer, batch_size=16,\n",
+    "        self,\n",
+    "        dataset,\n",
+    "        metric,\n",
+    "        model,\n",
+    "        tokenizer,\n",
+    "        batch_size=16,\n",
     "        device=\"cuda\" if torch.cuda.is_available else \"cpu\",\n",
-    "        column_text=\"article\", column_summary=\"highlights\"):\n",
-    "        \n",
-    "        article_batches = list(generate_batch_sized_chunks(dataset[column_text], batch_size))\n",
-    "        target_batches = list(generate_batch_sized_chunks(dataset[column_summary], batch_size))\n",
+    "        column_text=\"article\",\n",
+    "        column_summary=\"highlights\",\n",
+    "    ):\n",
+    "\n",
+    "        article_batches = list(\n",
+    "            generate_batch_sized_chunks(dataset[column_text], batch_size)\n",
+    "        )\n",
+    "        target_batches = list(\n",
+    "            generate_batch_sized_chunks(dataset[column_summary], batch_size)\n",
+    "        )\n",
     "\n",
     "        for article_batch, target_batch in tqdm(\n",
-    "            zip(article_batches, target_batches), total=len(article_batches)):\n",
-    "            \n",
-    "            inputs = tokenizer(article_batch, max_length=1024,  truncation=True, \n",
-    "                            padding=\"max_length\", return_tensors=\"pt\")\n",
-    "            \n",
-    "            summaries = model.generate(input_ids=inputs[\"input_ids\"].to(device),\n",
-    "                            attention_mask=inputs[\"attention_mask\"].to(device), \n",
-    "                            length_penalty=0.8, num_beams=8, max_length=128)\n",
-    "            ''' parameter for length penalty ensures that the model does not generate sequences that are too long. '''\n",
-    "            \n",
-    "            # Finally, we decode the generated texts, \n",
+    "            zip(article_batches, target_batches), total=len(article_batches)\n",
+    "        ):\n",
+    "\n",
+    "            inputs = tokenizer(\n",
+    "                article_batch,\n",
+    "                max_length=1024,\n",
+    "                truncation=True,\n",
+    "                padding=\"max_length\",\n",
+    "                return_tensors=\"pt\",\n",
+    "            )\n",
+    "\n",
+    "            summaries = model.generate(\n",
+    "                input_ids=inputs[\"input_ids\"].to(device),\n",
+    "                attention_mask=inputs[\"attention_mask\"].to(device),\n",
+    "                length_penalty=0.8,\n",
+    "                num_beams=8,\n",
+    "                max_length=128,\n",
+    "            )\n",
+    "            \"\"\" parameter for length penalty ensures that the model does not generate sequences that are too long. \"\"\"\n",
+    "\n",
+    "            # Finally, we decode the generated texts,\n",
     "            # replace the  token, and add the decoded texts with the references to the metric.\n",
-    "            decoded_summaries = [tokenizer.decode(s, skip_special_tokens=True, \n",
-    "                                    clean_up_tokenization_spaces=True) \n",
-    "                for s in summaries]      \n",
-    "            \n",
+    "            decoded_summaries = [\n",
+    "                tokenizer.decode(\n",
+    "                    s, skip_special_tokens=True, clean_up_tokenization_spaces=True\n",
+    "                )\n",
+    "                for s in summaries\n",
+    "            ]\n",
+    "\n",
     "            decoded_summaries = [d.replace(\"\", \" \") for d in decoded_summaries]\n",
-    "            \n",
-    "            \n",
+    "\n",
     "            metric.add_batch(predictions=decoded_summaries, references=target_batch)\n",
-    "            \n",
+    "\n",
     "        #  Finally compute and return the ROUGE scores.\n",
     "        score = metric.compute()\n",
     "        return score\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    def evaluate(self):\n",
     "        devic = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "        tokenizer = BertTokenizer.from_pretrained(self.config.tokenizer_path)\n",
-    "        bert_model = BartForConditionalGeneration.from_pretrained(self.config.model_path).to(device)\n",
-    "        \n",
-    "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
+    "        bert_model = BartForConditionalGeneration.from_pretrained(\n",
+    "            self.config.model_path\n",
+    "        ).to(device)\n",
     "\n",
-    "        \n",
-    "        "
+    "        dataset_samsum_pt = load_from_disk(self.config.data_path)"
    ]
   },
   {
@@ -170,52 +192,93 @@
     "class ModelEvaluation:\n",
     "    def __init__(self, config):\n",
     "        self.config = config\n",
-    "        \n",
+    "\n",
     "    def generate_batch_sized_chunks(self, list_of_elements, batch_size):\n",
     "        \"\"\"Yield successive batch-sized chunks from the list of elements.\"\"\"\n",
     "        for i in range(0, len(list_of_elements), batch_size):  # Corrected variable name\n",
     "            yield list_of_elements[i : i + batch_size]\n",
-    "            \n",
+    "\n",
     "    def calculate_metric_on_test_dataset(  # Corrected method name\n",
-    "        self, dataset, metric, model, tokenizer, batch_size=16,\n",
-    "        device=\"cuda\" if torch.cuda.is_available() else \"cpu\",  # Corrected function call\n",
-    "        column_text=\"article\", column_summary=\"highlights\"\n",
+    "        self,\n",
+    "        dataset,\n",
+    "        metric,\n",
+    "        model,\n",
+    "        tokenizer,\n",
+    "        batch_size=16,\n",
+    "        device=(\n",
+    "            \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "        ),  # Corrected function call\n",
+    "        column_text=\"article\",\n",
+    "        column_summary=\"highlights\",\n",
     "    ):\n",
-    "        article_batches = list(self.generate_batch_sized_chunks(dataset[column_text], batch_size))  # Added self.\n",
-    "        target_batches = list(self.generate_batch_sized_chunks(dataset[column_summary], batch_size))  # Added self.\n",
+    "        article_batches = list(\n",
+    "            self.generate_batch_sized_chunks(dataset[column_text], batch_size)\n",
+    "        )\n",
+    "        target_batches = list(\n",
+    "            self.generate_batch_sized_chunks(dataset[column_summary], batch_size)\n",
+    "        )\n",
     "\n",
     "        for article_batch, target_batch in tqdm(\n",
-    "            zip(article_batches, target_batches), total=len(article_batches)):\n",
-    "            \n",
-    "            inputs = tokenizer(article_batch, max_length=1024, truncation=True, \n",
-    "                               padding=\"max_length\", return_tensors=\"pt\")\n",
-    "            \n",
-    "            summaries = model.generate(input_ids=inputs[\"input_ids\"].to(device),\n",
-    "                                       attention_mask=inputs[\"attention_mask\"].to(device), \n",
-    "                                       length_penalty=0.8, num_beams=8, max_length=128)\n",
-    "            \n",
-    "            decoded_summaries = [tokenizer.decode(s, skip_special_tokens=True, \n",
-    "                                                  clean_up_tokenization_spaces=True) \n",
-    "                                 for s in summaries]\n",
-    "            \n",
+    "            zip(article_batches, target_batches), total=len(article_batches)\n",
+    "        ):\n",
+    "\n",
+    "            inputs = tokenizer(\n",
+    "                article_batch,\n",
+    "                max_length=1024,\n",
+    "                truncation=True,\n",
+    "                padding=\"max_length\",\n",
+    "                return_tensors=\"pt\",\n",
+    "            )\n",
+    "\n",
+    "            summaries = model.generate(\n",
+    "                input_ids=inputs[\"input_ids\"].to(device),\n",
+    "                attention_mask=inputs[\"attention_mask\"].to(device),\n",
+    "                length_penalty=0.8,\n",
+    "                num_beams=8,\n",
+    "                max_length=128,\n",
+    "            )\n",
+    "\n",
+    "            decoded_summaries = [\n",
+    "                tokenizer.decode(\n",
+    "                    s, skip_special_tokens=True, clean_up_tokenization_spaces=True\n",
+    "                )\n",
+    "                for s in summaries\n",
+    "            ]\n",
+    "\n",
     "            decoded_summaries = [d.replace(\"\", \" \") for d in decoded_summaries]\n",
-    "            \n",
+    "\n",
     "            metric.add_batch(predictions=decoded_summaries, references=target_batch)\n",
-    "            \n",
+    "\n",
     "        score = metric.compute()\n",
     "        return score\n",
-    "    \n",
+    "\n",
     "    def evaluate(self):\n",
-    "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"  # Corrected variable name\n",
+    "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "        tokenizer = BertTokenizer.from_pretrained(self.config.tokenizer_path)\n",
-    "        model = BartForConditionalGeneration.from_pretrained(self.config.model_path).to(device)\n",
-    "        \n",
+    "        model = BartForConditionalGeneration.from_pretrained(self.config.model_path).to(\n",
+    "            device\n",
+    "        )\n",
+    "\n",
     "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
-    "        \n",
-    "        # Assuming you have a metric and dataset ready, you would call the method like this:\n",
-    "        # metric = load_metric('some_metric')\n",
-    "        # score = self.calculate_metric_on_test_dataset(dataset_samsum_pt, metric, model, tokenizer)\n",
-    "        # print(score)\n"
+    "\n",
+    "        rouge_names = [\"rouge1\", \"rouge2\", \"rougeL\", \"rougeLsum\"]\n",
+    "\n",
+    "        rouge_metric = load_metric(\"rouge\")\n",
+    "\n",
+    "        score = self.calculate_metric_on_test_ds(\n",
+    "            dataset_samsum_pt[\"test\"][0:10],\n",
+    "            rouge_metric,\n",
+    "            model,\n",
+    "            tokenizer,\n",
+    "            batch_size=2,\n",
+    "            column_text=\"dialogue\",\n",
+    "            column_summary=\"summary\",\n",
+    "        )\n",
+    "\n",
+    "        rouge_dict = dict((rn, score[rn].mid.fmeasure) for rn in rouge_names)\n",
+    "\n",
+    "        df = pd.DataFrame(rouge_dict, index=[\"bert-large-cnn\"])\n",
+    "        df.to_csv(self.config.metric_file_name, index=False)"
    ]
   },
   {
@@ -229,10 +292,17 @@
     "    model_evaluation_config = config.get_model_evaluation_config()\n",
     "    model_evaluation_config = ModelEvaluation(config=model_evaluation_config)\n",
     "    model_evaluation_config.evaluate()\n",
-    "    \n",
+    "\n",
     "except Exception as e:\n",
     "    raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
