--- a/notebooks/04_model_evaluation.ipynb
+++ b/notebooks/04_model_evaluation.ipynb
@@ -101,90 +101,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ModelEvaluation:\n",
-    "    def __init__(self, config):\n",
-    "        self.config = config\n",
-    "\n",
-    "    def generate_batch_sized_chunks(self, list_of_elements, batch_size):\n",
-    "        \"\"\"split the dataset into smaller batches that we can process simultaneously\n",
-    "        Yield successive batch-sized chunks from the list of elements.\n",
-    "        \"\"\"\n",
-    "        for i in range(0, len(list_of_elements), batch_size):\n",
-    "            yield list_of_elements[i : i + batch_size]\n",
-    "\n",
-    "    def calcuate_metric_on_test_dataset(\n",
-    "        self,\n",
-    "        dataset,\n",
-    "        metric,\n",
-    "        model,\n",
-    "        tokenizer,\n",
-    "        batch_size=16,\n",
-    "        device=\"cuda\" if torch.cuda.is_available else \"cpu\",\n",
-    "        column_text=\"article\",\n",
-    "        column_summary=\"highlights\",\n",
-    "    ):\n",
-    "\n",
-    "        article_batches = list(\n",
-    "            generate_batch_sized_chunks(dataset[column_text], batch_size)\n",
-    "        )\n",
-    "        target_batches = list(\n",
-    "            generate_batch_sized_chunks(dataset[column_summary], batch_size)\n",
-    "        )\n",
-    "\n",
-    "        for article_batch, target_batch in tqdm(\n",
-    "            zip(article_batches, target_batches), total=len(article_batches)\n",
-    "        ):\n",
-    "\n",
-    "            inputs = tokenizer(\n",
-    "                article_batch,\n",
-    "                max_length=1024,\n",
-    "                truncation=True,\n",
-    "                padding=\"max_length\",\n",
-    "                return_tensors=\"pt\",\n",
-    "            )\n",
-    "\n",
-    "            summaries = model.generate(\n",
-    "                input_ids=inputs[\"input_ids\"].to(device),\n",
-    "                attention_mask=inputs[\"attention_mask\"].to(device),\n",
-    "                length_penalty=0.8,\n",
-    "                num_beams=8,\n",
-    "                max_length=128,\n",
-    "            )\n",
-    "            \"\"\" parameter for length penalty ensures that the model does not generate sequences that are too long. \"\"\"\n",
-    "\n",
-    "            # Finally, we decode the generated texts,\n",
-    "            # replace the  token, and add the decoded texts with the references to the metric.\n",
-    "            decoded_summaries = [\n",
-    "                tokenizer.decode(\n",
-    "                    s, skip_special_tokens=True, clean_up_tokenization_spaces=True\n",
-    "                )\n",
-    "                for s in summaries\n",
-    "            ]\n",
-    "\n",
-    "            decoded_summaries = [d.replace(\"\", \" \") for d in decoded_summaries]\n",
-    "\n",
-    "            metric.add_batch(predictions=decoded_summaries, references=target_batch)\n",
-    "\n",
-    "        #  Finally compute and return the ROUGE scores.\n",
-    "        score = metric.compute()\n",
-    "        return score\n",
-    "\n",
-    "    def evaluate(self):\n",
-    "        devic = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "        tokenizer = BertTokenizer.from_pretrained(self.config.tokenizer_path)\n",
-    "        bert_model = BartForConditionalGeneration.from_pretrained(\n",
-    "            self.config.model_path\n",
-    "        ).to(device)\n",
-    "\n",
-    "        dataset_samsum_pt = load_from_disk(self.config.data_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -194,63 +110,106 @@
     "        self.config = config\n",
     "\n",
     "    def generate_batch_sized_chunks(self, list_of_elements, batch_size):\n",
-    "        \"\"\"Yield successive batch-sized chunks from the list of elements.\"\"\"\n",
-    "        for i in range(0, len(list_of_elements), batch_size):  # Corrected variable name\n",
-    "            yield list_of_elements[i : i + batch_size]\n",
+    "    \"\"\"\n",
+    "    Yield successive batch-sized chunks from the list of elements.\n",
     "\n",
-    "    def calculate_metric_on_test_dataset(  # Corrected method name\n",
-    "        self,\n",
+    "    Parameters:\n",
+    "    - list_of_elements (List): The list of elements to be divided into chunks.\n",
+    "    - batch_size (int): The size of each chunk.\n",
+    "\n",
+    "    Yields:\n",
+    "    - List: A batch-sized chunk of elements from the input list.\n",
+    "\n",
+    "    Example:\n",
+    "    >>> list_of_numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "    >>> batch_generator = generate_batch_sized_chunks(list_of_numbers, 3)\n",
+    "    >>> next(batch_generator)\n",
+    "    [1, 2, 3]\n",
+    "    >>> next(batch_generator)\n",
+    "    [4, 5, 6]\n",
+    "    >>> next(batch_generator)\n",
+    "    [7, 8, 9]\n",
+    "    >>> next(batch_generator)\n",
+    "    [10]\n",
+    "    \"\"\"\n",
+    "    for i in range(0, len(list_of_elements), batch_size):\n",
+    "        yield list_of_elements[i : i + batch_size]\n",
+    "\n",
+    "    def calculate_metric_on_test_dataset(\n",
     "        dataset,\n",
     "        metric,\n",
     "        model,\n",
     "        tokenizer,\n",
     "        batch_size=16,\n",
-    "        device=(\n",
-    "            \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "        ),  # Corrected function call\n",
+    "        device=(\"cuda\" if torch.cuda.is_available() else \"cpu\"),\n",
     "        column_text=\"article\",\n",
     "        column_summary=\"highlights\",\n",
     "    ):\n",
-    "        article_batches = list(\n",
-    "            self.generate_batch_sized_chunks(dataset[column_text], batch_size)\n",
+    "    \"\"\"\n",
+    "    This function calculates the metric on a test dataset using a given model and tokenizer.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - dataset: The dataset on which to calculate the metric.\n",
+    "    - metric: The metric object to use for calculation.\n",
+    "    - model: The model to generate summaries.\n",
+    "    - tokenizer: The tokenizer to use for encoding the input data.\n",
+    "    - batch_size (optional): The batch size for processing the dataset. Default is 16.\n",
+    "    - device (optional): The device to use for model and tensor computations. Default is 'cuda' if available, else 'cpu'.\n",
+    "    - column_text (optional): The column name in the dataset containing the text data. Default is 'article'.\n",
+    "    - column_summary (optional): The column name in the dataset containing the summary data. Default is 'highlights'.\n",
+    "\n",
+    "    Returns:\n",
+    "    - score: The computed metric score.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Split the dataset into batches for processing\n",
+    "    article_batches = list(\n",
+    "        self.generate_batch_sized_chunks(dataset[column_text], batch_size)\n",
+    "    )\n",
+    "    target_batches = list(\n",
+    "        self.generate_batch_sized_chunks(dataset[column_summary], batch_size)\n",
+    "    )\n",
+    "\n",
+    "    # Process each batch and calculate the metric\n",
+    "    for article_batch, target_batch in tqdm(\n",
+    "        zip(article_batches, target_batches), total=len(article_batches)\n",
+    "    ):\n",
+    "\n",
+    "        # Encode the input data\n",
+    "        inputs = tokenizer(\n",
+    "            article_batch,\n",
+    "            max_length=1024,\n",
+    "            truncation=True,\n",
+    "            padding=\"max_length\",\n",
+    "            return_tensors=\"pt\",\n",
     "        )\n",
-    "        target_batches = list(\n",
-    "            self.generate_batch_sized_chunks(dataset[column_summary], batch_size)\n",
+    "\n",
+    "        # Generate summaries using the model\n",
+    "        summaries = model.generate(\n",
+    "            input_ids=inputs[\"input_ids\"].to(device),\n",
+    "            attention_mask=inputs[\"attention_mask\"].to(device),\n",
+    "            length_penalty=0.8,\n",
+    "            num_beams=8,\n",
+    "            max_length=128,\n",
     "        )\n",
     "\n",
-    "        for article_batch, target_batch in tqdm(\n",
-    "            zip(article_batches, target_batches), total=len(article_batches)\n",
-    "        ):\n",
-    "\n",
-    "            inputs = tokenizer(\n",
-    "                article_batch,\n",
-    "                max_length=1024,\n",
-    "                truncation=True,\n",
-    "                padding=\"max_length\",\n",
-    "                return_tensors=\"pt\",\n",
+    "        # Decode the generated summaries\n",
+    "        decoded_summaries = [\n",
+    "            tokenizer.decode(\n",
+    "                s, skip_special_tokens=True, clean_up_tokenization_spaces=True\n",
     "            )\n",
+    "            for s in summaries\n",
+    "        ]\n",
     "\n",
-    "            summaries = model.generate(\n",
-    "                input_ids=inputs[\"input_ids\"].to(device),\n",
-    "                attention_mask=inputs[\"attention_mask\"].to(device),\n",
-    "                length_penalty=0.8,\n",
-    "                num_beams=8,\n",
-    "                max_length=128,\n",
-    "            )\n",
+    "        # Remove any empty spaces from the decoded summaries\n",
+    "        decoded_summaries = [d.replace(\"\", \" \") for d in decoded_summaries]\n",
     "\n",
-    "            decoded_summaries = [\n",
-    "                tokenizer.decode(\n",
-    "                    s, skip_special_tokens=True, clean_up_tokenization_spaces=True\n",
-    "                )\n",
-    "                for s in summaries\n",
-    "            ]\n",
+    "        # Add the predictions and references to the metric\n",
+    "        metric.add_batch(predictions=decoded_summaries, references=target_batch)\n",
     "\n",
-    "            decoded_summaries = [d.replace(\"\", \" \") for d in decoded_summaries]\n",
-    "\n",
-    "            metric.add_batch(predictions=decoded_summaries, references=target_batch)\n",
-    "\n",
-    "        score = metric.compute()\n",
-    "        return score\n",
+    "    # Compute the final metric score\n",
+    "    score = metric.compute()\n",
+    "    return score\n",
     "\n",
     "    def evaluate(self):\n",
     "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
